<resources>
    <string name="app_name">CallerInfo Plugin</string>
    <string name="plugin_privacy">Privacy policy</string>
    <string name="license">License</string>
    <string name="version">Plugin Version: %1$s</string>
    <string name="version_code">Plugin Version code: %1$d</string>
    <string name="install_main_app">CallerInfo main app is not installed</string>
    <string name="install">Install</string>
    <string name="setting">Setting</string>
    <string name="main_app_too_old">Please update CallerInfo to support this action</string>
    <string name="install_full_plugin">This plugin version does not support write to call log, please upgrade to <a href="https://github.com/xdtianyu/CallerInfo/releases">full version</a></string>
    <string name="plugin_service_running">Plugin service is running</string>
</resources>
